--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,16 @@ homepage = "http://github.com/tailhook/tk-listen"
 documentation = "http://docs.rs/tk-listen"
 version = "0.2.1"
 authors = ["paul@colomiets.name"]
+edition = "2018"
 
 [dependencies]
-tokio = "0.1.7"
-tokio-io = "0.1.3"
-futures = "0.1.16"
-log = "0.4.1"
+tokio = "0.1"
+log = "0.4"
 
 [dev-dependencies]
-tk-http = "0.3.1"
-tokio-core = "0.1.10"
-env_logger = "0.5.10"
-abstract-ns = "0.4.0"
-ns-env-config = "0.1.0"
+tk-http = "0.3"
+tokio-core = "0.1"
+env_logger = "0.5"
+abstract-ns = "0.4"
+ns-env-config = "0.1"
 
